--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # Mod Properties
     mod_version                 = 1.0.10
     maven_group                 = com.github.cao.awa
-    archives_base_name          = language-translator
+    archives_base_name          = fluxia
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
     minecraft_version           = 1.21.3
