Update structuring translator to '1.1.1' .

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Done to increase the memory available to gradle.
     org.gradle.jvmargs          = -Xmx4G
 # Mod Properties
-    mod_version                 = 1.1.0-fix
+    mod_version                 = 1.1.1
     maven_group                 = com.github.cao.awa
     archives_base_name          = fluxia
 # Fabric Properties
@@ -13,4 +13,4 @@
 # check this on https://modmuss50.me/fabric.html
     fabric_version              = 0.107.0+1.21.3
 # Language translator
-    structuring_translator_version = 1.1.0-fix
+    structuring_translator_version = 1.1.1
